--- a/views/page.templ
+++ b/views/page.templ
@@ -3,6 +3,13 @@ package views
 templ Page() {
     <!DOCTYPE html>
     <html lang="en">
+        <head>
+			<title>Piquel Network</title>
+			<meta charset="UTF-8"/>
+			<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+			<link rel="stylesheet" href="/public/styles.css"/>
+			<script src="https://unpkg.com/htmx.org@1.9.10" defer></script>
+		</head>
         <body>{ children...}</body>
     </html>
 }
