Added icon and title in head

--- a/views/page.templ
+++ b/views/page.templ
@@ -1,13 +1,14 @@
 package views
 
 templ Page() {
-    <!DOCTYPE html>
-    <html lang="en">
-        <head>
-			<title>Piquel Network</title>
-			<meta charset="UTF-8"/>
+	<!DOCTYPE html>
+	<html lang="en">
+		<head>
+			<title>The Piquel Zone</title>
+			<meta charset="utf-8"/>
 			<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 			<link rel="stylesheet" href="/public/styles.css"/>
+			<link rel="icon" href="/public/piquel-jar.png"/>
 			<script src="https://unpkg.com/htmx.org@1.9.10" defer></script>
 		</head>
         <body>{ children...}</body>
