--- a/views/page.templ
+++ b/views/page.templ
@@ -1,5 +1,7 @@
 package views
 
+import "github.com/PiquelChips/piquel.fr/components"
+
 templ Page() {
 	<!DOCTYPE html>
 	<html lang="en">
@@ -11,6 +13,48 @@ templ Page() {
 			<link rel="icon" href="/public/piquel-jar.png"/>
 			<script src="https://unpkg.com/htmx.org@1.9.10" defer></script>
 		</head>
-        <body>{ children...}</body>
-    </html>
+		<body class="flex min-h-screen flex-col bg-white">
+		    <header class="grid grid-cols-2 bg-gray-300">
+                <nav class="flex justify-start">
+                    @components.NavButton("p-2 m-2", false, false, "/", false) { 🥒 }
+                    @components.NavButton("p-2 m-2", false, false, "/minecraft", false) { Minecraft }
+                    @components.NavButton("p-2 m-2", false, false, "/dirk", false) { Dirk }
+                </nav>
+                <div class="flex justify-end" hx-get="">
+                    if true {
+                        // Setup profile
+                        <button hx-get="/components/profile_bar" hx-target="#side_bar">
+                            @components.Card("py-3", false, false, 110) {
+                                <div class="flex">
+                                    <div class="py-1 pr-2"> Piquel </div>
+                                    <div class="pr-2">
+                                        <img
+                                            src="/public/piquel-jar.png"
+                                            alt="PFP"
+                                            height="32"
+                                            width="32"
+                                            class="size-8 border-2"
+                                            style="border-color: red;"
+                                        />
+                                    </div>
+                                </div>
+                            }
+                        </button>
+                    } else {
+                        @components.NavButton("p-2 m-2 px-6", false, true, "/auth/login", false) { Login }
+                    }
+                </div>
+            </header>
+		    <main>
+	            <div class="fixed right-0 z-50 m-1 flex min-w-32 flex-col rounded bg-gray-100 p-1">
+	            	@components.NavButton("p-1 m-1", false, true, "/profile/piquel", false) { Profile }
+	            	@components.NavButton("p-1 m-1", false, true, "/settings", false) { Settings }
+	            	// Add admin and thermostat pages behind login
+	            	@components.NavButton("p-1 m-1 text-red-700", false, true, "/auth/logout", false) { Signout }
+	            </div>
+		    	<div class="flex flex-col items-center">{ children... }</div>
+		    </main>
+            <footer class="n-1 mt-auto text-xs">Page designed and developed by Joe</footer>
+        </body>
+	</html>
 }
