--- a/views/css/styles.css
+++ b/views/css/styles.css
@@ -1,3 +1,9 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
+@import "tailwindcss";
+
+html {
+    font-family: "Comic Sans MS", "Comic Sans", cursive;
+}
+
+.max-div-width {
+    max-width: 65em;
+}
