--- a/views/page.templ
+++ b/views/page.templ
@@ -9,8 +9,8 @@ templ Page() {
 			<title>The Piquel Zone</title>
 			<meta charset="utf-8"/>
 			<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-			<link rel="stylesheet" href="/public/styles.css"/>
-			<link rel="icon" href="/public/piquel-jar.png"/>
+			<link rel="stylesheet" href="/styles.css"/>
+			<link rel="icon" href="/piquel-jar.png"/>
 			<script src="https://unpkg.com/htmx.org@1.9.10" defer></script>
 		</head>
 		<body class="flex min-h-screen flex-col bg-white">
