Fixed profile bar no toggling

--- a/views/page.templ
+++ b/views/page.templ
@@ -20,10 +20,10 @@ templ Page() {
                     @components.NavButton("p-2 m-2", false, false, "/minecraft", false) { Minecraft }
                     @components.NavButton("p-2 m-2", false, false, "/dirk", false) { Dirk }
                 </nav>
-                <div class="flex justify-end" hx-get="">
+                <div class="flex justify-end">
                     if true {
                         // Setup profile
-                        <button hx-get="/components/profile_bar" hx-target="#side_bar">
+                        <button onclick="toggleMenu()">
                             @components.Card("py-3", false, false, 110) {
                                 <div class="flex">
                                     <div class="py-1 pr-2"> Piquel </div>
@@ -46,7 +46,7 @@ templ Page() {
                 </div>
             </header>
 		    <main>
-	            <div class="fixed right-0 z-50 m-1 flex min-w-32 flex-col rounded bg-gray-100 p-1">
+	            <div id="profile_bar" class="fixed right-0 z-50 m-1 flex min-w-32 flex-col rounded bg-gray-100 p-1">
 	            	@components.NavButton("p-1 m-1", false, true, "/profile/piquel", false) { Profile }
 	            	@components.NavButton("p-1 m-1", false, true, "/settings", false) { Settings }
 	            	// Add admin and thermostat pages behind login
@@ -56,6 +56,15 @@ templ Page() {
 		    	<div class="py-2 flex flex-col items-center">{ children... }</div>
 		    </main>
             <footer class="m-1 mt-auto text-xs">Page designed and developed by Joe</footer>
+
+            <script>
+                let profile_bar = document.getElementById("profile_bar")
+                profile_bar.classList.toggle("hidden")
+
+                toggleMenu = () => {
+                    profile_bar.classList.toggle("hidden")
+                }
+            </script>
         </body>
 	</html>
 }
