--- a/views/page.templ
+++ b/views/page.templ
@@ -11,7 +11,7 @@ templ Page() {
 			<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 			<link rel="stylesheet" href="/styles.css"/>
 			<link rel="icon" href="/piquel-jar.png"/>
-			<script src="https://unpkg.com/htmx.org@1.9.10" defer></script>
+			<script src="/htmx.js" defer></script>
 		</head>
 		<body class="flex min-h-screen flex-col bg-white">
 		    <header class="grid grid-cols-2 bg-gray-300">
