Finidhed making home page

--- a/views/home.templ
+++ b/views/home.templ
@@ -4,9 +4,29 @@ import "github.com/PiquelChips/piquel.fr/components"
 
 templ Home() {
     @Page() {
-        @components.Card("", true, true, 110) {
-            <h1>Hello World!</h1>
-            <p>You are gay!</p>
-        }
+        <p class="text-center rounded-xl p-5 text-white font-bold text-3xl mt-3" style="background-color: #404040;">Welcome to the Piquel zone !</p>
+        <p class="text-center text-xl p-3"> Hub to all of the Piquel Network, So You Can Tickle Your Piquel in Peace </p>
+        <div class="grow justify-center flex flex-wrap gap-1 w-full px-10">
+            @components.Card("bg-gray-400 p-5 m-1 grow size-full max-w-xl", true, true, 110) {
+                <div class="text-center text-3xl pb-3">
+                    <h3 class="font-bold">Minecraft</h3>
+                </div>
+                <div class="grid grid-cols-2 grid-rows-2 text-center">
+	            	@components.NavButton("flex text-center justify-center items-center p-5 m-1", false, true, "http://piquel.fr:1101", true) { Holy Shit Dynmap }
+	            	@components.NavButton("flex text-center justify-center items-center p-5 m-1", false, true, "http://piquel.fr:1102", true) { Greymane Dynmap }
+	            	@components.NavButton("flex text-center justify-center items-center p-5 m-1", false, true, "http://piquel.fr:1103", true) { Stone Dynmap }
+	            	@components.NavButton("flex text-center justify-center items-center p-5 m-1", false, true, "https://piquel-network-store.tebex.io", true) { Minecraft Server Store }
+                </div>
+            }
+            @components.Card("bg-gray-400 p-5 m-1 grow size-full max-w-xl", true, true, 110) {
+                <div class="text-center text-3xl pb-3">
+                    <h3 class="font-bold">SNT</h3>
+                </div>
+                <div class="grid grid-cols-2 text-center">
+	            	@components.NavButton("flex text-center justify-center items-center p-5 m-1", false, true, "/snt/musset", true) { Présentation de Alfred de Musset }
+	            	@components.NavButton("flex text-center justify-center items-center p-5 m-1", false, true, "/snt/linus", true) { Présentation de Linus Torvalds et de sa création: Linux }
+                </div>
+            }
+        </div>
     }
 }
