Setup auth with cookie storage

--- a/views/home.templ
+++ b/views/home.templ
@@ -1,9 +1,10 @@
 package views
 
 import "github.com/PiquelChips/piquel.fr/components"
+import "github.com/PiquelChips/piquel.fr/types"
 
-templ Home() {
-    @Page() {
+templ Home(data *types.PageData) {
+    @Page(data) {
         <p class="text-center rounded-xl p-5 text-white font-bold text-3xl mt-3" style="background-color: #404040;">Welcome to the Piquel zone !</p>
         <p class="text-center text-xl p-3"> Hub to all of the Piquel Network, So You Can Tickle Your Piquel in Peace </p>
         <div class="grow justify-center flex flex-wrap gap-1 w-full px-10">
