--- a/views/dirk.templ
+++ b/views/dirk.templ
@@ -1,7 +1,9 @@
 package views
 
-templ Dirk() {
-    @Page() {
+import "github.com/PiquelChips/piquel.fr/types"
+
+templ Dirk(data *types.PageData) {
+    @Page(data) {
         <p class="text-3xl">This page is a work in progress !</p>
         <a class="underline" href="/">Go home</a>
     }
