Moved sessions related functions to sessions files

--- a/views/page.templ
+++ b/views/page.templ
@@ -35,6 +35,7 @@ templ Page(data *types.PageData) {
                                             width="32"
                                             class="size-8 border-2"
                                             style="border-color: red;"
+                                            loading="lazy"
                                         />
                                     </div>
                                 </div>
