Setup authentication with the database

--- a/views/auth/login.templ
+++ b/views/auth/login.templ
@@ -18,12 +18,12 @@ templ Login(data *types.PageData) {
 						<span class="text-2xl">Login with GitHub</span>
 					}
 				</a>
-				<a href="/auth/google">
-					@components.Card("px-5 py-3 border flex gap-2 border-slate-200 rounded-lg text-slate-700 hover:border-slate-400 hover:text-slate-900 hover:shadow transition duration-150", true, false, 0) {
-						<img src="/svg/google.svg" alt="google" class="size-8"/>
-						<span class="text-2xl">Login with Google</span>
-					}
-				</a>
+				// <a href="/auth/google">
+				// 	@components.Card("px-5 py-3 border flex gap-2 border-slate-200 rounded-lg text-slate-700 hover:border-slate-400 hover:text-slate-900 hover:shadow transition duration-150", true, false, 0) {
+				// 		<img src="/svg/google.svg" alt="google" class="size-8"/>
+				// 		<span class="text-2xl">Login with Google</span>
+				// 	}
+				// </a>
 			}
 		</div>
 	}
