--- a/views/settings/settings.templ
+++ b/views/settings/settings.templ
@@ -10,33 +10,29 @@ templ Settings(data *types.PageData, page string) {
         	<div class="grid w-full grid-cols-2 px-2">
         			<div class="flex justify-start">
         				<img
-        			        class={"size-16 border-4", data.UserColor}
-        					src={data.User.Image}
-        					alt={data.User.Username}
+        			        class={"size-16 border-4", data.Profile.UserColor}
+        					src={data.Profile.User.Image}
+        					alt={data.Profile.User.Username}
         				/>
         				<div class="ml-1">
         					<p class="text-2xl">
-        						{data.User.Name}
-        						<span class="text-lg text-gray-600">({data.User.Username})</span>
+        						{data.Profile.User.Name}
+        						<span class="text-lg text-gray-600">({data.Profile.User.Username})</span>
         					</p>
-        					<p>{data.User.Group}</p>
+        					<p>{data.Profile.UserGroup}</p>
         				</div>
         			</div>
         			<div class="flex items-center justify-end">
-                        @components.NavButton("p-2 px-3 rounded", false, true, "/profile/" + data.User.Username, false) { View profile }
+                        @components.NavButton("p-2 px-3 rounded", false, true, "/profile/" + data.Profile.User.Username, false) { View profile }
         			</div>
         	</div>
         	<div class="m-1 flex flex-wrap gap-8 pt-1">
         		<div class="w-auto grow justify-center">
                     @components.NavButton("p-1 m-1 min-w-64 text-left pl-2 w-full" + isActive(page, "profile"), false, true, "/settings/profile", false) { Profile }
-                    <hr class="h-px m-1 grow bg-gray-300 border-0">
+                    <hr class="h-px m-1 my-2 grow bg-gray-300 border-0">
                     @components.NavButton("p-1 m-1 min-w-64 text-left pl-2 w-full text-red-700", false, true, "/auth/logout", false) { Logout }
-                    @components.Card("p-1 m-1 min-w-64 text-left pl-2 text-red-700 w-full", true, false, 0) {
-                        <button hx-on:click="alert('WIP')">
-                            Delete Account 
-                        </button>
-                    }
-                    <hr class="h-px m-1 grow bg-gray-300 border-0">
+                    @components.NavButton("p-1 m-1 min-w-64 text-left pl-2 w-full text-red-700 my-2", false, true, "/not_implemented_yet", false) { Delete Account }
+                    <hr class="h-px m-1 my-2 grow bg-gray-300 border-0">
         		</div>
         		<div>{ children... }</div>
         	</div>
