Setup updating of profile settings

--- a/views/css/styles.css
+++ b/views/css/styles.css
@@ -7,3 +7,15 @@ html {
 .max-div-width {
     max-width: 65em;
 }
+
+.red {
+    border-color: red;
+}
+
+.gray {
+    border-color: gray;
+}
+
+.blue {
+    border-color: blue;
+}
