--- a/views/settings/settings.templ
+++ b/views/settings/settings.templ
@@ -26,7 +26,7 @@ templ Settings(data *types.PageData, page string) {
                         @components.NavButton("p-2 px-3 rounded", false, true, "/profile/" + data.Profile.User.Username, false) { View profile }
         			</div>
         	</div>
-        	<div class="m-1 flex flex-wrap gap-8 pt-1">
+        	<div class="m-1 flex gap-8 pt-1">
         		<div class="w-auto grow justify-center">
                     @components.NavButton("p-1 m-1 min-w-64 text-left pl-2 w-full" + isActive(page, "profile"), false, true, "/settings/profile", false) { Profile }
                     <hr class="h-px m-1 my-2 grow bg-gray-300 border-0">
