refactor: stop using docs API (#25)
## Summary of the PR

Move to MDsveX for documentation

## Steps before PR review

- [x] Implement the feature
- [x] Test the feature
- [x] Make sure all checks pass
- [x] Setup getting frontmatter information such as title and using to
update head
- [x] Look into [remark &
rehype](https://mdsvex.pngwn.io/docs#remarkplugins--rehypeplugins)
plugins for mdsvex
- [x] Properly document the feature in the PR

* Issues linked to the PR: Closes #24 

## Changes

- Remove all the old documentation rendering and stuff
- Add MDsveX and a layout for it
- Use prism VS code Dark style
- Move all the old [docs](https://github.com/piquel-fr/docs) to the new
system
- Add Notcie component with info, warning, danger and success presets
- Setup NavTree with NavNodes to handle building the navigation tree
- Add lucid svelte for more icons
- Add tailwind typography for proper rendering of documentation

--- a/src/lib/styles/global.css
+++ b/src/lib/styles/global.css
@@ -1,4 +1,5 @@
 @import "tailwindcss";
+@plugin "@tailwindcss/typography";
 
 html {
     font-family: "Comic Sans MS", "Comic Sans", cursive;
@@ -6,4 +7,8 @@ html {
 
 .max-div-width {
     max-width: 65em;
+}
+
+.w-max {
+    width: 65em;
 }
